--- a/css/main.css
+++ b/css/main.css
@@ -151,7 +151,7 @@ html {
     transition: 0.6s;
 }
 .section-forum button {
-    width: 20%;
+    width: 190px;
     height: 10%;
     background-color: #e1e1e1;
     color: #242424;
