--- a/css/main.css
+++ b/css/main.css
@@ -151,7 +151,7 @@ html {
     transition: 0.6s;
 }
 .section-forum button {
-    width: 190px;
+    width: 210px;
     height: 10%;
     background-color: #e1e1e1;
     color: #242424;
@@ -162,4 +162,10 @@ html {
 .section-forum__title {
     color: #e1e1e1;
     font-size: 36px;
+}
+
+@media (min-width: 1200px) {
+    .section-forum button {
+        width: 300px;
+    }
 }
